# libwinibverbs

./: CMakeLists.txt
include/: comp_channel.h  dlist.h
include/infiniband/: verbs.h
include/rdma/: winverbs.h  wvstatus.h
lib/: winverbs.lib
src/: comp_channel.cpp  device.cpp  enum_strs.cpp  ibv_main.cpp  ibverbs.h  ibverbs.rc  main.cpp  oib_ver.h  verbs.cpp
